# NikitaZhukov

lab_2/: CMakeLists.txt  Makefile  main.c
lab_2/lib/: Makefile  Pair.c  Queue.h  QueueList.c  QueueVector.c  lib.h  pair.c  pair.h
lab_2/src/: Item.h  RoundRobin.c  RoundRobin.h
lab_3a/: main.c
lab_3b/: Makefile  Table.c  main.c
lab_4a/: CMakeLists.txt  Makefile  input.txt  main.c
lab_4a/controller/: TreeController.c  TreeController.h
lab_4a/controller/dialog/: BTreeController.c  BTreeController.h
lab_4a/controller/graph/: GraphGenerator.c  GraphGenerator.h
lab_4a/tree/: BNode.c  BNode.h  BinaryTree.c  BinaryTree.h  Graph.c  Graph.h  Node.c  Node.h  Tree.c  Tree.h
lab_4a/view/: Dialog.c
lab_4b/: .gitignore  CMakeLists.txt  input.txt  main.c
lab_4b/controller/: TreeController.c  TreeController.h
lab_4b/tree/: Node.c  Node.h  Tree.c  Tree.h
lab_4b/view/: Dialog.c
lab_5/: .gitignore  CMakeLists.txt  Makefile  main.c
lab_5/graph/: Graph.c  PQueue.c  PQueue.h
